--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <img src="assets/img/inicio/logo.jpg" alt="">
         <!-- <h1>Las flores de <span>Lua</span></h1>-->
       </a>
+      <div>
+        <div class="fuente1">Las Flores de <span class="fuente2">Lua</span></div>
+      </div>
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="#hero">Inicio</a></li>
@@ -80,18 +83,14 @@
   <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="hero">
+  <section id="hero" class="hero sections-bg">
     <div class="container position-relative">
-      <div class="row gy-6" data-aos="fade-in">
-        <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
-          <h2>Las flores de <span>Lua</span></h2>
-          <p>
-            Un negocio familiar desde 2020
-          </p>
-
+      <div class="row gy-6 mb-2" data-aos="fade-in">
+        <div class="col-lg-4">
+          
         </div>
-        <div class="col-lg-6 order-1 order-lg-2">
-          <img width="350px" src="assets/img/inicio/logo.jpg" class="img-fluid" alt="" data-aos="zoom-out"
+        <div class="col-lg-6 order-1 order-lg-2 justify-content-center">
+          <img width="200px" src="assets/img/logolua.PNG" class="img-fluid" alt="" data-aos="zoom-out"
             data-aos-delay="100" />
         </div>
       </div>
@@ -387,7 +386,6 @@
       </div>
     </section>
     <!-- End Portfolio Section -->
-
 
     <!-- ======= Seccion Preguntas Frecuentes ======= -->
     <section id="faq" class="faq">
