update seccion significado

--- a/index.html
+++ b/index.html
@@ -548,24 +548,19 @@
       <div class="container gy-4 mt-4" data-aos="fade-up">
         <div class="section-header">
           <h2>Significado de las flores</h2>
-          <p>
-            Este apartado quedará listo para la entrega final del proyecto.
-          </p>
         </div>
 
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-4 col-md-6">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-activity"></i>
+                <img src="./assets/img/icons/tulipan.png"></img>
               </div>
-              <h3>Nesciunt Mete</h3>
+              <h3>Tulipanes</h3>
               <p>
-                Provident nihil minus qui consequatur non omnis maiores. Eos
-                accusantium minus dolores iure perferendis tempore et
-                consequatur.
+               Es un símbolo de amor sincero. Es una flor increíblemente romántica 
+               perteneciente a la familia Liliaceae.
               </p>
-              <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -573,14 +568,13 @@
           <div class="col-lg-4 col-md-6">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-broadcast"></i>
+                <img src="./assets/img/icons/lirio.png"></img>
               </div>
-              <h3>Eosle Commodi</h3>
+              <h3>Lirios</h3>
               <p>
-                Ut autem aut autem non a. Sint sint sit facilis nam iusto
-                sint. Libero corrupti neque eum hic non ut nesciunt dolorem.
+                Significa pureza, inocencia y belleza. La forma de estas flores es similar a la de una estrella. 
+                Se caracteriza por su aroma fuerte y agradable.
               </p>
-              <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -588,14 +582,13 @@
           <div class="col-lg-4 col-md-6">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-easel"></i>
+                <img src="./assets/img/icons/rosa.png"></img>
               </div>
-              <h3>Ledo Markt</h3>
+              <h3>Rosa Roja</h3>
               <p>
-                Ut excepturi voluptatem nisi sed. Quidem fuga consequatur.
-                Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.
+               Simboliza el amor, la pasión, la atracción, la seducción que se siente por la pareja.
+               Asimismo, simboliza la admiración, belleza y cariño que siente una amistad
               </p>
-              <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -603,14 +596,13 @@
           <div class="col-lg-4 col-md-6">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-bounding-box-circles"></i>
+                <img src="./assets/img/icons/rosa-blanca.png"></img>
               </div>
-              <h3>Asperiores Commodit</h3>
+              <h3>Rosa Blanca</h3>
               <p>
-                Non et temporibus minus omnis sed dolor esse consequatur.
-                Cupiditate sed error ea fuga sit provident adipisci neque.
+                Se relaciona con la pureza, la integridad, la paz y la inocencia. Además, 
+                con los nuevos inicios, la verdad y el bien espiritual.
               </p>
-              <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -618,14 +610,13 @@
           <div class="col-lg-4 col-md-6">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-calendar4-week"></i>
+                <img src="./assets/img/icons/margaritas.png"></img>
               </div>
-              <h3>Velit Doloremque</h3>
+              <h3>Margaritas</h3>
               <p>
-                Cumque et suscipit saepe. Est maiores autem enim facilis ut
-                aut ipsam corporis aut. Sed animi at autem alias eius labore.
+              Son el simbolo de la pureza, inocencia, amistad incondicional y el amor puro desligado hacia las pasiones
+              . Simboliza la alegria y sencillez.
               </p>
-              <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -633,14 +624,13 @@
           <div class="col-lg-4 col-md-6">
             <div class="service-item position-relative">
               <div class="icon">
-                <i class="bi bi-chat-square-text"></i>
+                <img src="./assets/img/icons/clavel.png"></img>
               </div>
-              <h3>Dolori Architecto</h3>
+              <h3>Claveles</h3>
               <p>
-                Hic molestias ea quibusdam eos. Fugiat enim doloremque aut
-                neque non et debitis iure. Corrupti recusandae ducimus enim.
+                Son clásicos y son conocidos también como "flor de amor", y la flor de los dioses. Cuando
+                recibes claveles, puede representar la belleza y admiración.
               </p>
-              <a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
