--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                 <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no"
                     marginheight="0" marginwidth="0"
                     src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=flores de lua&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
-                    href="https://mcpedls.com/">Minecraft Download</a></div>
+                    href="https://mcpedls.com/"></a></div>
                 <style>
                   .mapouter {
                     position: relative;
@@ -782,8 +782,6 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 
   <!-- Template Main JS File -->
