--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center">
       <a href="index.html" class="logo d-flex align-items-center"><br />
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/inicio/logo.jpg" alt="">
+        <img src="assets/img/inicio/logolua.jpg" alt="">
         <!-- <h1>Las flores de <span>Lua</span></h1>-->
       </a>
    
