--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
   <!-- CSS Files -->
-  <link href="assets/css/main.css" rel="stylesheet" />
-  <link href="assets/css/galeria.css" rel="stylesheet" />
+  <link href="assets/css/main.css" rel="stylesheet" /> 
 
 </head>
 
@@ -57,14 +56,13 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center">
       <a href="index.html" class="logo d-flex align-items-center"><br />
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/inicio/logolua.jpg" alt="">
+        <img src="assets/img/logolua.PNG" class="mw-100" alt="">
         <!-- <h1>Las flores de <span>Lua</span></h1>-->
       </a>
    
        
       <nav id="navbar" class="navbar justify-content-center">
         <ul>
-          <li><a class="nav-link logoCenter" href="#"><div class="wrapper"><img src="assets/img/logolua.PNG"></div></a></li>
           <li><a href="#hero">Inicio</a></li>
           <li><a href="#about">Sobre Nosotros</a></li>
           <li><a href="#portfolio">Productos</a></li>
