--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/img/inicio/graduacion.jpg" class="img-fluid" alt="" />
-              <h4>Graduación</h4>
+              <h4> <a href="#portfolio">Graduación</a> </h4>
             </div>
           </div>
           <!-- Fin Team Member -->
@@ -565,34 +565,6 @@
       </div>
     </section>
     <!-- Fin Seccion Preguntas Frecuentes -->
-
-    <!-- ======= Seccion Referencia Clientes ======= -->
-    <section id="testimonials" class="testimonials">
-      <div class="container gy-4 mt-4" data-aos="fade-up">
-        <div class="section-header">
-          <h2>Clientes</h2>
-          <div class="container">
-            <div class="box">
-              <img src="https://source.unsplash.com/1000x800">
-              <span>CSS</span>
-            </div>
-            <div class="box">
-              <img src="https://source.unsplash.com/1000x802">
-              <span>Image</span>
-            </div>
-            <div class="box">
-              <img src="https://source.unsplash.com/1000x804">
-              <span>Hover</span>
-            </div>
-            <div class="box">
-              <img src="https://source.unsplash.com/1000x806">
-              <span>Effect</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Fin Referencia Clientes Seccion -->
 
     <!-- ======= Seccion Significado Flores ======= -->
     <section id="services" class="services sections-bg">
