--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="assets/img/inicio/ramos2.jpg" class="img-fluid" alt="" />
-              <h4>Ramos</h4>
+              <h4 class="text-light"> <a href="#portfolio">Ramos</a> </h4>
             </div>
           </div>
           <!-- Fin Team Member -->
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/img/inicio/graduacion.jpg" class="img-fluid" alt="" />
-              <h4> <a href="#portfolio">Graduación</a> </h4>
+              <h4 class="text-light"> <a href="#portfolio">Graduación</a> </h4>
             </div>
           </div>
           <!-- Fin Team Member -->
@@ -155,7 +155,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <img src="assets/img/inicio/princesas.jpg" class="img-fluid" alt="" />
-              <h4>Especiales</h4>
+              <h4 class="text-light"> <a href="#portfolio">Especiales</a> </h4>
             </div>
           </div>
           <!-- Fin Team Member -->
@@ -163,7 +163,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <img src="assets/img/inicio/arreglo.jpg" class="img-fluid" alt="" />
-              <h4>Arreglos</h4>
+              <h4 class="text-light"> <a href="#portfolio">Arreglos</a> </h4>
             </div>
           </div>
           <!-- Fin Team Member -->
