--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </header>
   <!-- Fin Header -->
 
-  <!-- ======= Hero Section ======= -->
+  <!-- ======= Seccion Carrusel ======= -->
   <section id="hero" class="hero sections-bg">
     <div class="container position-relative">
       <div class="row gy-6 mb-2" data-aos="fade-in">
@@ -126,47 +126,41 @@
         </div>
       </div>
     </div>
-
-    <!-- ======= Our Team Section ======= -->
+ 
     <div id="team" class="team">
       <div class="container position-relative" data-aos="fade-up">
         <div class="row gy-4">
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="assets/img/inicio/ramos2.jpg" class="img-fluid" alt="" />
-              <h4 class="text-light"> <a href="#portfolio">Ramos</a> </h4>
+              <h4> <a href="#portfolio">Ramos</a> </h4>
             </div>
-          </div>
-          <!-- Fin Team Member -->
+          </div> 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/img/inicio/graduacion.jpg" class="img-fluid" alt="" />
-              <h4 class="text-light"> <a href="#portfolio">Graduación</a> </h4>
+              <h4> <a href="#portfolio">Graduación</a> </h4>
             </div>
-          </div>
-          <!-- Fin Team Member -->
+          </div> 
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <img src="assets/img/inicio/princesas.jpg" class="img-fluid" alt="" />
-              <h4 class="text-light"> <a href="#portfolio">Especiales</a> </h4>
+              <h4> <a href="#portfolio">Especiales</a> </h4>
             </div>
-          </div>
-          <!-- Fin Team Member -->
+          </div> 
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <img src="assets/img/inicio/arreglo.jpg" class="img-fluid" alt="" />
-              <h4 class="text-light"> <a href="#portfolio">Arreglos</a> </h4>
+              <h4> <a href="#portfolio">Arreglos</a> </h4>
             </div>
-          </div>
-          <!-- Fin Team Member -->
+          </div> 
         </div>
       </div>
-    </div>
-    <!-- Fin Our Team Section -->
+    </div> 
   </section>
-  <!-- Fin Hero Section -->
+  <!-- Fin Seccion Carrusel-->
 
   <main id="main">
     <!-- ======= Seccion Sobre Nosotros ======= -->
